--- a/plugins/com.phonegap.plugins.PushPlugin/Example/www/index.html
+++ b/plugins/com.phonegap.plugins.PushPlugin/Example/www/index.html
@@ -81,7 +81,7 @@
 						$("#app-status-ul").append('<li>REGISTERED -> REGID:' + e.regid + "</li>");
 						// Your GCM push server needs to know the regID before it can push to this device
 						// here is where you might want to send it the regID for later use.
-						console.log("regID = " + e.regID);
+						console.log("regID = " + e.regid);
 					}
                     break;
                     
