Fix to remind, pin, repeat icon image paths. Overriding autocomplete for mobile app

--- a/www/index.html
+++ b/www/index.html
@@ -334,13 +334,13 @@ App.baseURL = "http://192.168.0.106:8080/";
 						<input type="text" id="input0" name="data"
 							style="width: calc(100% - 110px); margin-right: 5px;"
 							class="textField" /> <a href="#" onclick="modifyInput('repeat')"><img
-							src="/images/repeat.png"
+							src="images/repeat.png"
 							style="width: 20px; height: 20px; padding-top: 5px;"></a> <a
 							href="#" onclick="modifyInput('remind')"><img
-							src="/images/remind.png"
+							src="images/remind.png"
 							style="width: 20px; height: 20px; padding-top: 5px;"></a> <a
 							href="#" onclick="modifyInput('pinned')"><img
-							src="/images/pin.png"
+							src="images/pin.png"
 							style="width: 20px; height: 20px; padding-top: 5px;"></a>
 					</form>
 					<hr />
