iOS app with push notification and icon changes

--- a/www/index.html
+++ b/www/index.html
@@ -155,14 +155,6 @@ function getCSRFPreventionObjectMobile(key, data) {
 <link type="text/css" href="css/mobile/trackPage.css?ver=10"
 	rel="stylesheet">
 
-<script type="text/javascript">$(function() {
-var App = window.App;
-App.baseURL = "http://192.168.0.106:8080/";
-});</script>
-
-
-
-
 </head>
 <body>
 
@@ -634,9 +626,9 @@ $(function(){
 			
 			$contentWrapper.hide();
 			$selectee.append('<span id="tagTextEdit" style="display:inline"><input type="text" id="tagTextInput" style="margin: 2px; width: calc(100% - 110px);"></input>'
-				+ '<img src="/images/repeat.png" id="tagEditRepeat" style="width:14px;height:14px;padding-left:1px;padding-top:2px;">'
-				+ '<img src="/images/remind.png" id="tagEditRemind" style="width:14px;height:14px;padding-left:1px;padding-top:2px;">'
-				+ '<img src="/images/pin.png" id="tagEditPinned" style="width:14px;height:14px;padding-left:1px;padding-top:2px;"></span>');
+				+ '<img src="images/repeat.png" id="tagEditRepeat" style="width:14px;height:14px;padding-left:1px;padding-top:2px;">'
+				+ '<img src="images/remind.png" id="tagEditRemind" style="width:14px;height:14px;padding-left:1px;padding-top:2px;">'
+				+ '<img src="images/pin.png" id="tagEditPinned" style="width:14px;height:14px;padding-left:1px;padding-top:2px;"></span>');
 
 			$("#tagEditRepeat").off("mousedown");
 			$("#tagEditRemind").off("mousedown");
