Restructuring mobile app to mimic the mobile site

--- a/www/mobile/main.html
+++ b/www/mobile/main.html
@@ -1,6 +1,6 @@
 <html manifest="/mobile/cache.manifest">
 <head>
-<link rel="shortcut icon" href="images/favicon.ico"
+<link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="layout" content="main" />
@@ -58,32 +58,32 @@ setInterval(function(){cache.update()}, 10000);
 
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript"
-	src="js/jquery/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="js/jquery/jquery.offline.js"></script>
+	src="../js/jquery/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="../js/jquery/jquery.offline.js"></script>
 <script type="text/javascript"
-	src="js/jquery/jquery.json-2.2.js"></script>
+	src="../js/jquery/jquery.json-2.2.js"></script>
 <script type="text/javascript"
-	src="js/jquery/jquery-ui-1.8.18.custom.js"></script>
+	src="../js/jquery/jquery-ui-1.8.18.custom.js"></script>
 <script type="text/javascript"
-	src="js/jquery/jquery.selectable.custom.js?ver=7"></script>
-<script type="text/javascript" src="js/jstz-1.0.4.min.js"></script>
+	src="../js/jquery/jquery.selectable.custom.js?ver=7"></script>
+<script type="text/javascript" src="../js/jstz-1.0.4.min.js"></script>
 
-<script type="text/javascript" src="js/curious/base.js?ver=9"></script>
-<script type="text/javascript" src="js/curious/curious.js?ver=9"></script>
-<script type="text/javascript" src="js/curious/autocomplete.js?ver=9"></script>
-<script type="text/javascript" src="js/mobile/mobileBase.js"></script>
+<script type="text/javascript" src="../js/curious/base.js?ver=9"></script>
+<script type="text/javascript" src="../js/curious/curious.js?ver=9"></script>
+<script type="text/javascript" src="../js/curious/autocomplete.js?ver=9"></script>
+<script type="text/javascript" src="../js/mobile/mobileBase.js"></script>
 
 <script type="text/javascript"
-	src="js/jquery/jquery.mobile.touch.min.js?ver=9"></script>
+	src="../js/jquery/jquery.mobile.touch.min.js?ver=9"></script>
 <link rel="apple-touch-icon"
-	href="images/apple-touch-icon-precomposed.png" />
-<link rel="shortcut icon" href="images/favicon.ico"
+	href="../images/apple-touch-icon-precomposed.png" />
+<link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon" />
-<link rel="stylesheet" href="css/mobile.css?ver=1" />
+<link rel="stylesheet" href="../css/mobile.css?ver=1" />
 <link type="text/css"
-	href="css/smoothness/jquery-ui-1.8.16.custom2.css"
+	href="../css/smoothness/jquery-ui-1.8.16.custom2.css"
 	rel="stylesheet">
-<link type="text/css" href="css/mobile/trackPage.css?ver=10"
+<link type="text/css" href="../css/mobile/trackPage.css?ver=10"
 	rel="stylesheet">
 
 </head>
@@ -101,7 +101,7 @@ setInterval(function(){cache.update()}, 10000);
 			<div class="login">
 
 				<a href="javascript:startLogin(0)"><img border="0"
-					id="loginlogo" src="images/logo.gif" width="205"
+					id="loginlogo" src="../images/logo.gif" width="205"
 					height="230" alt="Curious" style="display:none;" /></a>
 	
 		<form id="loginform" onsubmit="return false;" action="#">
@@ -127,11 +127,11 @@ setInterval(function(){cache.update()}, 10000);
 					name="password" />
 			</div>
 			<div id="loginButtonDiv" class="okCancelDiv">
-				<img class="loginButton" src="images/login.png" width="76" height="24" alt="Login" onclick="submitForm()" /><br />
+				<img class="loginButton" src="../images/login.png" width="76" height="24" alt="Login" onclick="submitForm()" /><br />
 			</div>
 			<div id="cancelButtonDiv" class="okCancelDiv">
-				<img class="cancelButton" src="images/cancel.png" width="76" height="24" alt="Cancel" onclick="javascript:startLogin(0)"/>
-				<img class="loginButton" src="images/submit.png" width="76" height="24" alt="Submit" onclick="submitForm()" /><br />
+				<img class="cancelButton" src="../images/cancel.png" width="76" height="24" alt="Cancel" onclick="javascript:startLogin(0)"/>
+				<img class="loginButton" src="../images/submit.png" width="76" height="24" alt="Submit" onclick="submitForm()" /><br />
 			</div>
 			</div>
 		</form>
@@ -160,9 +160,9 @@ setInterval(function(){cache.update()}, 10000);
 		<form id="taginput" onsubmit="return false;" action="#" style="padding-top: 0.7em; padding-bottom: 0.7em;">
 			<input type="text" id="input0" name="data" style="width:calc(100% - 110px);margin-right:5px;" class="textField" />
 			<div style="display: inline-block;vertical-align: middle;">
-				<a href="#" onclick="modifyInput('repeat')"><img src="images/repeat.png" style="width:20px;height:20px;"></a>
-				<a href="#" onclick="modifyInput('remind')"><img src="images/remind.png" style="width:20px;height:20px;"></a>
-				<a href="#" onclick="modifyInput('pinned')"><img src="images/pin.png" style="width:20px;height:20px;"></a>
+				<a href="#" onclick="modifyInput('repeat')"><img src="../images/repeat.png" style="width:20px;height:20px;"></a>
+				<a href="#" onclick="modifyInput('remind')"><img src="../images/remind.png" style="width:20px;height:20px;"></a>
+				<a href="#" onclick="modifyInput('pinned')"><img src="../images/pin.png" style="width:20px;height:20px;"></a>
 			</div>
 		</form>
 		<hr />
@@ -188,7 +188,7 @@ setInterval(function(){cache.update()}, 10000);
 </div>
 </div>
 <script type="text/javascript" src="cordova.js"></script>
-	<script type="text/javascript" src="js/mobile/index.js"></script>
+	<script type="text/javascript" src="../js/mobile/index.js"></script>
 	<script type="text/javascript">
 		console.log("App object: "+app);
     	app.initialize();
