Fix: Image references

--- a/www/mobile/main.html
+++ b/www/mobile/main.html
@@ -187,7 +187,7 @@ setInterval(function(){cache.update()}, 10000);
 	</div>
 </div>
 </div>
-<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="../cordova.js"></script>
 	<script type="text/javascript" src="../js/mobile/index.js"></script>
 	<script type="text/javascript">
 		console.log("App object: "+app);
