--- a/www/mobile/main.html
+++ b/www/mobile/main.html
@@ -69,7 +69,7 @@ setInterval(function(){cache.update()}, 10000);
 <script type="text/javascript" src="../js/curious/base.js?ver=9"></script>
 <script type="text/javascript" src="../js/curious/curious.js?ver=9"></script>
 <script type="text/javascript" src="../js/curious/autocomplete.js?ver=9"></script>
-<script type="text/javascript" src="../js/mobile/mobileBase.js?ver=10"></script>
+<script type="text/javascript" src="../js/mobile/mobileBase.js?ver=11"></script>
 
 <script type="text/javascript"
 	src="../js/jquery/jquery.mobile.touch.min.js?ver=9"></script>
@@ -144,7 +144,7 @@ setInterval(function(){cache.update()}, 10000);
 			<div class="trackDay">
 				<div id="header">
 					<div id="fetchingData" style="height: 20px; width: 100%; display:none;">
-						<img src='../images/spinner.gif' /> Fetching data from Curious
+						<img src='../images/spinner.gif' style="display:block; margin-left: auto; margin-right: auto"/>
 					</div>
 					<div class="dateBar">
 						<a class="back" href="#" onclick="changeDate(-1);"><span>back</span></a>
@@ -175,11 +175,11 @@ setInterval(function(){cache.update()}, 10000);
 					</div>
 				</div>
 
-				<div id="content">
-					<div class="dataTags">
+				<div id="content" style="height: calc(100% - 104px);">
+					<div class="dataTags" style="height: 100%;">
 						<div id="recordList"
-							style="overflow: auto; -webkit-overflow-scrolling: touch;">
-							<ol id="entry0" style="width: 100%;">
+							style="overflow: auto; height: 100%; -webkit-overflow-scrolling: touch;">
+							<ol id="entry0" style="width: 100%; height: 100%;">
 							</ol>
 						</div>
 					</div>
