--- a/www/mobile/main.html
+++ b/www/mobile/main.html
@@ -54,7 +54,8 @@ setInterval(function(){cache.update()}, 10000);
 <meta name="description" content="A platform for health hackers" />
 <meta names="apple-mobile-web-app-status-bar-style"
 	content="black-translucent" />
-<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
+<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width,height=device-height" />
+<!-- <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" /> -->
 
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript" src="../js/jquery/jquery-1.7.2.min.js"></script>
@@ -63,24 +64,24 @@ setInterval(function(){cache.update()}, 10000);
 <script type="text/javascript"
 	src="../js/jquery/jquery-ui-1.8.18.custom.js"></script>
 <script type="text/javascript"
-	src="../js/jquery/jquery.selectable.custom.js?ver=7"></script>
+	src="../js/jquery/jquery.selectable.custom.js?ver=14"></script>
 <script type="text/javascript" src="../js/jstz-1.0.4.min.js"></script>
 
-<script type="text/javascript" src="../js/curious/base.js?ver=9"></script>
-<script type="text/javascript" src="../js/curious/curious.js?ver=9"></script>
-<script type="text/javascript" src="../js/curious/autocomplete.js?ver=9"></script>
-<script type="text/javascript" src="../js/mobile/mobileBase.js?ver=12"></script>
+<script type="text/javascript" src="../js/curious/base.js?ver=14"></script>
+<script type="text/javascript" src="../js/curious/curious.js?ver=14"></script>
+<script type="text/javascript" src="../js/curious/autocomplete.js?ver=14"></script>
+<script type="text/javascript" src="../js/mobile/mobileBase.js?ver=14"></script>
 
 <script type="text/javascript"
-	src="../js/jquery/jquery.mobile.touch.min.js?ver=9"></script>
+	src="../js/jquery/jquery.mobile.touch.min.js?ver=14"></script>
 <link rel="apple-touch-icon"
 	href="../images/apple-touch-icon-precomposed.png" />
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon" />
-<link rel="stylesheet" href="../css/mobile.css?ver=1" />
+<link rel="stylesheet" href="../css/mobile.css?ver=14" />
 <link type="text/css"
 	href="../css/smoothness/jquery-ui-1.8.16.custom2.css" rel="stylesheet">
-<link type="text/css" href="../css/mobile/trackPage.css?ver=11"
+<link type="text/css" href="../css/mobile/trackPage.css?ver=14"
 	rel="stylesheet">
 
 </head>
@@ -198,6 +199,7 @@ setInterval(function(){cache.update()}, 10000);
 
 		</div>
 	</div>
+
 	<script type="text/javascript" src="../cordova.js"></script>
 	<script type="text/javascript" src="../js/mobile/index.js"></script>
 	<script type="text/javascript">
